Update AQ Remodeling website references to new domain and correct video source URL
- Changed all instances of the domain from `aqremodeling.com` to `aqremodelinginc.com` across multiple HTML files, sitemap, and robots.txt.
- Updated video source URL in portfolio.html to use URL-encoded format for spaces.
- Ensured consistency in contact email across all relevant files.

This update aims to reflect the new branding and improve accessibility of media resources.

--- a/clients/aq-remodeling/03_website/contact.html
+++ b/clients/aq-remodeling/03_website/contact.html
@@ -50,7 +50,7 @@
                         <div class="contact-icon contact-icon-inline">📧</div>
                         <div>
                             <h3 class="contact-info-title">Email</h3>
-                            <p class="contact-info-text">info@aqremodeling.com</p>
+                            <p class="contact-info-text">info@aqremodelinginc.com</p>
                         </div>
                     </div>
 
@@ -82,7 +82,7 @@
                         <li>✓ No obligation or pressure</li>
                     </ul>
                 </div>
-            </div>
+            </article>
 
             <!-- Contact Form -->
             <div>
@@ -207,7 +207,7 @@
             <p class="cta-text">We're here to help bring your vision to life</p>
             <div class="button-group">
                 <a href="tel:5551234567" class="cta-button">Call Us Now</a>
-                <a href="mailto:info@aqremodeling.com" class="cta-button cta-button-secondary">Send Email</a>
+                <a href="mailto:info@aqremodelinginc.com" class="cta-button cta-button-secondary">Send Email</a>
             </div>
         </div>
     </section>
@@ -233,7 +233,7 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>📧 info@aqremodeling.com</p>
+                <p>📧 info@aqremodelinginc.com</p>
                 <p>📞 (555) 123-4567</p>
                 <p>📍 Orange County, CA</p>
             </div>
