--- a/clients/aq-remodeling/03_website/index.html
+++ b/clients/aq-remodeling/03_website/index.html
@@ -12,20 +12,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://aqremodeling.com/">
+    <meta property="og:url" content="https://aqremodelinginc.com/">
     <meta property="og:title" content="AQ Remodeling | Premium Remodeling Services Orange County">
     <meta property="og:description" content="Award-winning remodeling contractor in Orange County. 20+ years transforming homes and businesses.">
-    <meta property="og:image" content="https://aqremodeling.com/images/Work-pics-and-vids/IMG_0468.png">
+    <meta property="og:image" content="https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://aqremodeling.com/">
+    <meta property="twitter:url" content="https://aqremodelinginc.com/">
     <meta property="twitter:title" content="AQ Remodeling | Premium Remodeling Services Orange County">
     <meta property="twitter:description" content="Award-winning remodeling contractor in Orange County. 20+ years transforming homes and businesses.">
-    <meta property="twitter:image" content="https://aqremodeling.com/images/Work-pics-and-vids/IMG_0468.png">
+    <meta property="twitter:image" content="https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.png">
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://aqremodeling.com/">
+    <link rel="canonical" href="https://aqremodelinginc.com/">
 
     <!-- Geo Tags -->
     <meta name="geo.region" content="US-CA">
@@ -44,7 +44,7 @@
       "@context": "https://schema.org",
       "@type": "GeneralContractor",
       "name": "AQ Remodeling",
-      "image": "https://aqremodeling.com/images/Work-pics-and-vids/IMG_0468.png",
+      "image": "https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.png",
       "description": "Premium residential and commercial remodeling services in Orange County, California",
       "address": {
         "@type": "PostalAddress",
@@ -57,7 +57,7 @@
         "latitude": 33.7175,
         "longitude": -117.8311
       },
-      "url": "https://aqremodeling.com",
+      "url": "https://aqremodelinginc.com",
       "telephone": "+1-555-123-4567",
       "priceRange": "$$$$",
       "openingHoursSpecification": {
@@ -322,7 +322,7 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>📧 info@aqremodeling.com</p>
+                <p>📧 info@aqremodelinginc.com</p>
                 <p>📞 (555) 123-4567</p>
                 <p>📍 Orange County, CA</p>
             </div>
