--- a/clients/aq-remodeling/03_website/portfolio.html
+++ b/clients/aq-remodeling/03_website/portfolio.html
@@ -344,7 +344,7 @@
 
             <div class="portfolio-item video-item" data-category="commercial">
                 <video loop muted playsinline poster="images/Work-pics-and-vids/IMG_0480.webp">
-                    <source src="images/Work-pics-and-vids/Cerramiento Plegable AluTecnic.MP4" type="video/mp4">
+                    <source src="images/Work-pics-and-vids/Cerramiento%20Plegable%20AluTecnic.MP4" type="video/mp4">
                 </video>
                 <div class="portfolio-overlay">
                     <h3>Folding Glass Enclosure</h3>
@@ -413,7 +413,7 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>📧 info@aqremodeling.com</p>
+                <p>📧 info@aqremodelinginc.com</p>
                 <p>📞 (555) 123-4567</p>
                 <p>📍 Orange County, CA</p>
             </div>
