commit: AQ Remodeling website

--- a/clients/aq-remodeling/03_website/contact.html
+++ b/clients/aq-remodeling/03_website/contact.html
@@ -20,7 +20,6 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="commercial.html">Commercial</a></li>
                 <li><a href="residential.html">Residential</a></li>
-                <li><a href="trade-services.html">Trade Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
@@ -48,19 +47,10 @@
 
                 <div class="contact-info-container">
                     <div class="contact-info-item">
-                        <div class="contact-icon contact-icon-inline">👤</div>
-                        <div>
-                            <h3 class="contact-info-title">Project Manager</h3>
-                            <p class="contact-info-text"><strong>Nia Prinia</strong></p>
-                            <p class="contact-info-text-small">Contact Nia for all inquiries</p>
-                        </div>
-                    </div>
-
-                    <div class="contact-info-item">
                         <div class="contact-icon contact-icon-inline">📧</div>
                         <div>
                             <h3 class="contact-info-title">Email</h3>
-                            <p class="contact-info-text"><a href="mailto:Nia@AQRRemodelingInc.com" style="color: var(--luxury-gold);">Nia@AQRRemodelingInc.com</a></p>
+                            <p class="contact-info-text">info@aqremodelinginc.com</p>
                         </div>
                     </div>
 
@@ -68,8 +58,8 @@
                         <div class="contact-icon contact-icon-inline">📞</div>
                         <div>
                             <h3 class="contact-info-title">Phone</h3>
-                            <p class="contact-info-text-large"><a href="tel:7147512222" style="color: var(--luxury-gold-light); font-weight: 700;">714.751.2222</a></p>
-                            <p class="contact-info-text-small"><strong>Available 7 days a week, by appointment only</strong></p>
+                            <p class="contact-info-text-large">(555) 123-4567</p>
+                            <p class="contact-info-text-small">Mon-Fri: 8am - 6pm | Sat: 9am - 4pm</p>
                         </div>
                     </div>
 
@@ -77,8 +67,8 @@
                         <div class="contact-icon contact-icon-inline">📍</div>
                         <div>
                             <h3 class="contact-info-title">Office</h3>
-                            <p class="contact-info-text">18952 MacArthur Blvd, Suite 100, Office 115</p>
-                            <p class="contact-info-text-small">Irvine, CA 92612</p>
+                            <p class="contact-info-text">Orange County, California</p>
+                            <p class="contact-info-text-small">Serving all of Orange County</p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +99,7 @@
 
                     <div class="form-group">
                         <label for="phone">Phone Number *</label>
-                        <input type="tel" id="phone" name="phone" required placeholder="714.751.2222">
+                        <input type="tel" id="phone" name="phone" required placeholder="(555) 123-4567">
                     </div>
 
                     <div class="form-group">
@@ -216,8 +206,8 @@
             <h2>Have questions<br>or ready to get started?</h2>
             <p class="cta-text">We're here to help bring your vision to life</p>
             <div class="button-group">
-                <a href="tel:7147512222" class="cta-button">Call Nia: 714.751.2222</a>
-                <a href="mailto:Nia@AQRRemodelingInc.com" class="cta-button cta-button-secondary">Email Nia</a>
+                <a href="tel:5551234567" class="cta-button">Call Us Now</a>
+                <a href="mailto:info@aqremodelinginc.com" class="cta-button cta-button-secondary">Send Email</a>
             </div>
         </div>
     </section>
@@ -233,7 +223,6 @@
                 <h3>Services</h3>
                 <a href="commercial.html">Commercial Remodeling</a>
                 <a href="residential.html">Residential Remodeling</a>
-                <a href="trade-services.html">Trade Services</a>
                 <a href="portfolio.html">Portfolio</a>
             </div>
             <div class="footer-section">
@@ -244,12 +233,9 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p><strong>Nia Prinia, Project Manager</strong></p>
-                <p>📧 <a href="mailto:Nia@AQRRemodelingInc.com" style="color: var(--luxury-gold);">Nia@AQRRemodelingInc.com</a></p>
-                <p>📞 <a href="tel:7147512222" style="color: var(--luxury-gold);">714.751.2222</a></p>
-                <p>📍 18952 MacArthur Blvd, Suite 100, Office 115<br>Irvine, CA 92612</p>
-                <p><strong>📅 Available 7 days a week, by appointment only in the Irvine Office</strong></p>
-                <p style="margin-top: 1rem; color: var(--luxury-gold);"><strong>Contact Nia, Project Manager at the Phone Number provided</strong></p>
+                <p>📧 info@aqremodelinginc.com</p>
+                <p>📞 (555) 123-4567</p>
+                <p>📍 Orange County, CA</p>
             </div>
         </div>
         <div class="footer-bottom">
