commit: AQ Remodeling website updates

--- a/clients/aq-remodeling/03_website/about.html
+++ b/clients/aq-remodeling/03_website/about.html
@@ -102,6 +102,10 @@
                 <span class="stat-number">20+</span>
                 <span class="stat-label">Years of excellence</span>
             </div>
+            <div class="stat-item">
+                <span class="stat-number">100%</span>
+                <span class="stat-label">Licensed & insured</span>
+            </div>
         </div>
     </section>
 
