--- a/clients/aq-remodeling/03_website/commercial.html
+++ b/clients/aq-remodeling/03_website/commercial.html
@@ -179,6 +179,10 @@
                 <span class="stat-number">20+</span>
                 <span class="stat-label">Years of excellence</span>
             </div>
+            <div class="stat-item">
+                <span class="stat-number">100%</span>
+                <span class="stat-label">Licensed & insured</span>
+            </div>
         </div>
         <div class="text-center margin-top-large">
             <a href="tel:7147512222" class="cta-button">Call Nia to Start: 714.751.2222</a>
