--- a/clients/aq-remodeling/03_website/about.html
+++ b/clients/aq-remodeling/03_website/about.html
@@ -129,21 +129,25 @@
     <!-- Video/Image Gallery Section -->
     <section class="section section-dark">
         <div class="section-header">
-            <h2>See our work in action</h2>
-            <p>Witness the transformation process</p>
+            <h2>Our completed transformations</h2>
+            <p>Showcasing exceptional craftsmanship and design excellence</p>
         </div>
         <div class="grid-2 grid-gap-large">
-            <div class="video-container-wrapper">
-                <video loop muted playsinline poster="images/Work-pics-and-vids/IMG_0468.webp">
-                    <source src="images/Work-pics-and-vids/6424a2cd-465a-4dd9-b863-2b2689069520.MP4" type="video/mp4">
-                </video>
-                <div class="video-play-button" onclick="this.parentElement.querySelector('video').play()">▶</div>
+            <div class="premium-video-presentation" style="height: 100%; min-height: 400px;">
+                <img src="images/Work-pics-and-vids/IMG_0468.webp" alt="Luxury Kitchen Remodel with Premium Finishes and Modern Design">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Excellence in Every Detail</h4>
+                    <p>Premium craftsmanship and design</p>
+                </div>
             </div>
             <div class="image-grid-2x2">
-                <img src="images/Work-pics-and-vids/IMG_0475.webp" alt="Project 1">
-                <img src="images/Work-pics-and-vids/IMG_0476.webp" alt="Project 2">
-                <img src="images/Work-pics-and-vids/IMG_0477.webp" alt="Project 3">
-                <img src="images/Work-pics-and-vids/IMG_0478.webp" alt="Project 4">
+                <img src="images/Work-pics-and-vids/IMG_0475.webp" alt="Modern Outdoor Kitchen and Entertainment Space">
+                <img src="images/Work-pics-and-vids/IMG_0476.webp" alt="Elegant Bathroom Remodel with Luxury Fixtures">
+                <img src="images/Work-pics-and-vids/IMG_0477.webp" alt="Commercial Office Space Renovation">
+                <img src="images/Work-pics-and-vids/IMG_0478.webp" alt="Luxury Residential Living Space Transformation">
             </div>
         </div>
     </section>
@@ -216,9 +220,11 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>📧 info@aqremodelinginc.com</p>
-                <p>📞 (555) 123-4567</p>
-                <p>📍 Orange County, CA</p>
+                <p><strong>Nia Prinia, Project Manager</strong></p>
+                <p>📧 <a href="mailto:Nia@AQRRemodelingInc.com" style="color: var(--luxury-gold);">Nia@AQRRemodelingInc.com</a></p>
+                <p>📞 <a href="tel:7147512222" style="color: var(--luxury-gold);">714.751.2222</a></p>
+                <p>📍 18952 MacArthur Blvd, Suite 100, Office 115<br>Irvine, CA 92612</p>
+                <p style="margin-top: 1rem; color: var(--luxury-gold);"><strong>📅 Available 7 days a week, by appointment only in the Irvine Office</strong></p>
             </div>
         </div>
         <div class="footer-bottom">
