--- a/clients/aq-remodeling/03_website/faq.html
+++ b/clients/aq-remodeling/03_website/faq.html
@@ -248,9 +248,11 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>📧 info@aqremodelinginc.com</p>
-                <p>📞 (555) 123-4567</p>
-                <p>📍 Orange County, CA</p>
+                <p><strong>Nia Prinia, Project Manager</strong></p>
+                <p>📧 <a href="mailto:Nia@AQRRemodelingInc.com" style="color: var(--luxury-gold);">Nia@AQRRemodelingInc.com</a></p>
+                <p>📞 <a href="tel:7147512222" style="color: var(--luxury-gold);">714.751.2222</a></p>
+                <p>📍 18952 MacArthur Blvd, Suite 100, Office 115<br>Irvine, CA 92612</p>
+                <p style="margin-top: 1rem; color: var(--luxury-gold);"><strong>📅 Available 7 days a week, by appointment only in the Irvine Office</strong></p>
             </div>
         </div>
         <div class="footer-bottom">
