--- a/clients/aq-remodeling/03_website/index.html
+++ b/clients/aq-remodeling/03_website/index.html
@@ -48,8 +48,10 @@
       "description": "Premium residential and commercial remodeling services in Orange County, California",
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Orange County",
+        "streetAddress": "18952 MacArthur Blvd, Suite 100, Office 115",
+        "addressLocality": "Irvine",
         "addressRegion": "CA",
+        "postalCode": "92612",
         "addressCountry": "US"
       },
       "geo": {
@@ -58,7 +60,7 @@
         "longitude": -117.8311
       },
       "url": "https://aqremodelinginc.com",
-      "telephone": "+1-555-123-4567",
+      "telephone": "+1-714-751-2222",
       "priceRange": "$$$$",
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
@@ -356,44 +358,69 @@
             </div>
         </div>
         <div class="section-header">
-            <h3 style="color: var(--luxury-gold); margin-bottom: 2rem;">Video Testimonials</h3>
+            <h3 style="color: var(--luxury-gold); margin-bottom: 2rem;">Featured Project Showcase</h3>
+            <p style="color: var(--text-light);">Cinematic presentations of our finest completed transformations</p>
         </div>
         <div class="grid-3" style="gap: 2rem;">
-            <div style="background: var(--accent-dark); padding: 1rem; border-radius: 8px;">
-                <video controls style="width: 100%; border-radius: 4px; margin-bottom: 1rem;">
-                    <source src="images/Work-pics-and-vids/IMG_6988.MOV" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="premium-video-presentation">
+                <img src="images/Work-pics-and-vids/IMG_0468.webp" alt="Luxury Kitchen Remodel with Premium Finishes and Modern Design">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Luxury Kitchen Transformation</h4>
+                    <p>Premium finishes and modern design excellence</p>
+                </div>
             </div>
-            <div style="background: var(--accent-dark); padding: 1rem; border-radius: 8px;">
-                <video controls style="width: 100%; border-radius: 4px; margin-bottom: 1rem;">
-                    <source src="images/Work-pics-and-vids/IMG_6949.MOV" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="premium-video-presentation">
+                <img src="images/Work-pics-and-vids/IMG_0470.webp" alt="Elegant Bathroom Remodel with Marble Accents and Luxury Fixtures">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Spa-Inspired Bathroom</h4>
+                    <p>Marble accents and luxury fixtures</p>
+                </div>
             </div>
-            <div style="background: var(--accent-dark); padding: 1rem; border-radius: 8px;">
-                <video controls style="width: 100%; border-radius: 4px; margin-bottom: 1rem;">
-                    <source src="images/Work-pics-and-vids/IMG_6831.MOV" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="premium-video-presentation">
+                <img src="images/Work-pics-and-vids/IMG_0475.webp" alt="Modern Outdoor Kitchen and Entertainment Space with Premium Design">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Outdoor Entertainment Space</h4>
+                    <p>Complete outdoor kitchen design</p>
+                </div>
             </div>
-            <div style="background: var(--accent-dark); padding: 1rem; border-radius: 8px;">
-                <video controls style="width: 100%; border-radius: 4px; margin-bottom: 1rem;">
-                    <source src="images/Work-pics-and-vids/IMG_6770.MOV" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="premium-video-presentation">
+                <img src="images/Work-pics-and-vids/IMG_0471.webp" alt="Commercial Office Space Renovation with Professional Design">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Commercial Office Renovation</h4>
+                    <p>Professional workspace transformation</p>
+                </div>
             </div>
-            <div style="background: var(--accent-dark); padding: 1rem; border-radius: 8px;">
-                <video controls style="width: 100%; border-radius: 4px; margin-bottom: 1rem;">
-                    <source src="images/Work-pics-and-vids/IMG_6190.MOV" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="premium-video-presentation">
+                <img src="images/Work-pics-and-vids/IMG_0472.webp" alt="Elegant Living Space with Modern Design and Sophisticated Craftsmanship">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Modern Living Space</h4>
+                    <p>Sophisticated design and craftsmanship</p>
+                </div>
             </div>
-            <div style="background: var(--accent-dark); padding: 1rem; border-radius: 8px;">
-                <video controls style="width: 100%; border-radius: 4px; margin-bottom: 1rem;">
-                    <source src="images/Work-pics-and-vids/IMG_6189.MOV" type="video/quicktime">
-                    Your browser does not support the video tag.
-                </video>
+            <div class="premium-video-presentation">
+                <img src="images/Work-pics-and-vids/IMG_0473.webp" alt="Luxury Home Remodel with High-End Finishes Throughout">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Luxury Home Remodel</h4>
+                    <p>High-end finishes throughout</p>
+                </div>
             </div>
         </div>
         <div class="text-center margin-top-large">
