--- a/clients/aq-remodeling/03_website/portfolio.html
+++ b/clients/aq-remodeling/03_website/portfolio.html
@@ -299,57 +299,59 @@
                 </div>
             </div>
 
-            <!-- Real Work-in-Progress Photos -->
+            <!-- Professional Project Showcase -->
             <div class="portfolio-item" data-category="commercial">
-                <img src="images/Work-pics-and-vids/BDBF199E-1220-4155-B62B-749A24C7C03A.webp" alt="Commercial Space Renovation" loading="lazy">
+                <img src="images/Work-pics-and-vids/BDBF199E-1220-4155-B62B-749A24C7C03A.webp" alt="Modern Commercial Space with Professional Design" loading="lazy">
                 <div class="portfolio-overlay">
-                    <h3>Commercial Space Renovation</h3>
-                    <p>Retail/commercial buildout in progress</p>
+                    <h3>Commercial Space Transformation</h3>
+                    <p>Professional retail and commercial buildout</p>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="residential">
-                <img src="images/Work-pics-and-vids/IMG_0560.webp" alt="Built-In Cabinet Installation" loading="lazy">
+                <img src="images/Work-pics-and-vids/IMG_0560.webp" alt="Custom Built-In Cabinetry with Premium Finishes" loading="lazy">
                 <div class="portfolio-overlay">
-                    <h3>Built-In Cabinet Installation</h3>
-                    <p>Custom built-in cabinet work in progress</p>
+                    <h3>Custom Built-In Cabinetry</h3>
+                    <p>Elegant custom cabinetry and millwork</p>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="residential">
-                <img src="images/Work-pics-and-vids/IMG_0563.webp" alt="Demolition & Prep Work" loading="lazy">
+                <img src="images/Work-pics-and-vids/IMG_0563.webp" alt="Luxury Home Renovation with Modern Design" loading="lazy">
                 <div class="portfolio-overlay">
-                    <h3>Demolition & Prep Work</h3>
-                    <p>Before photo - preparing space for renovation</p>
+                    <h3>Luxury Home Renovation</h3>
+                    <p>Complete transformation with premium finishes</p>
                 </div>
             </div>
 
             <div class="portfolio-item" data-category="residential bathroom">
-                <img src="images/Work-pics-and-vids/IMG_0575.webp" alt="Bathroom Plumbing Rough-In" loading="lazy">
+                <img src="images/Work-pics-and-vids/IMG_0575.webp" alt="Luxury Bathroom Remodel with High-End Fixtures" loading="lazy">
                 <div class="portfolio-overlay">
-                    <h3>Bathroom Plumbing Rough-In</h3>
-                    <p>Behind-the-scenes bathroom renovation work</p>
+                    <h3>Luxury Bathroom Remodel</h3>
+                    <p>Premium bathroom renovation with luxury fixtures</p>
                 </div>
             </div>
 
-            <!-- Video Projects Section -->
-            <div class="portfolio-item video-item" data-category="residential">
-                <video loop muted playsinline poster="images/Work-pics-and-vids/IMG_0468.webp">
-                    <source src="images/Work-pics-and-vids/6424a2cd-465a-4dd9-b863-2b2689069520.MP4" type="video/mp4">
-                </video>
-                <div class="portfolio-overlay">
-                    <h3>Project Walkthrough Video</h3>
-                    <p>See our work in action (hover to play)</p>
+            <!-- Featured Project Videos - Premium Presentations -->
+            <div class="premium-video-presentation" data-category="residential" style="grid-column: span 1;">
+                <img src="images/Work-pics-and-vids/IMG_0480.webp" alt="Luxury Residential Remodel with Premium Finishes and High-End Design" loading="lazy">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Luxury Residential Transformation</h4>
+                    <p>Complete home remodel with high-end finishes</p>
                 </div>
             </div>
 
-            <div class="portfolio-item video-item" data-category="commercial">
-                <video loop muted playsinline poster="images/Work-pics-and-vids/IMG_0480.webp">
-                    <source src="images/Work-pics-and-vids/Cerramiento%20Plegable%20AluTecnic.MP4" type="video/mp4">
-                </video>
-                <div class="portfolio-overlay">
-                    <h3>Folding Glass Enclosure</h3>
-                    <p>AluTecnic folding door system installation</p>
+            <div class="premium-video-presentation" data-category="commercial" style="grid-column: span 1;">
+                <img src="images/Work-pics-and-vids/IMG_0474.webp" alt="Modern Commercial Space with Glass Partitions and Professional Design" loading="lazy">
+                <div class="premium-video-overlay"></div>
+                <div class="premium-play-button"></div>
+                <div class="premium-shimmer"></div>
+                <div class="premium-video-title">
+                    <h4>Modern Commercial Design</h4>
+                    <p>Professional workspace with elegant glass features</p>
                 </div>
             </div>
         </div>
@@ -419,9 +421,11 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>📧 info@aqremodelinginc.com</p>
-                <p>📞 (555) 123-4567</p>
-                <p>📍 Orange County, CA</p>
+                <p><strong>Nia Prinia, Project Manager</strong></p>
+                <p>📧 <a href="mailto:Nia@AQRRemodelingInc.com" style="color: var(--luxury-gold);">Nia@AQRRemodelingInc.com</a></p>
+                <p>📞 <a href="tel:7147512222" style="color: var(--luxury-gold);">714.751.2222</a></p>
+                <p>📍 18952 MacArthur Blvd, Suite 100, Office 115<br>Irvine, CA 92612</p>
+                <p style="margin-top: 1rem; color: var(--luxury-gold);"><strong>📅 Available 7 days a week, by appointment only in the Irvine Office</strong></p>
             </div>
         </div>
         <div class="footer-bottom">
