--- a/clients/aq-remodeling/03_website/trade-services.html
+++ b/clients/aq-remodeling/03_website/trade-services.html
@@ -21,8 +21,10 @@
       "description": "Individual trade services in Orange County. Plumbing, electrical, drywall, painting, flooring, and more. No full project required. Appointment only.",
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Orange County",
+        "streetAddress": "18952 MacArthur Blvd, Suite 100, Office 115",
+        "addressLocality": "Irvine",
         "addressRegion": "CA",
+        "postalCode": "92612",
         "addressCountry": "US"
       },
       "geo": {
@@ -31,7 +33,7 @@
         "longitude": -117.8311
       },
       "url": "https://aqremodelinginc.com/trade-services.html",
-      "telephone": "+1-555-123-4567",
+      "telephone": "+1-714-751-2222",
       "priceRange": "$$$$",
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
