Fix contact.html: Use article tag for form section to maintain grid structure

--- a/clients/aq-remodeling/03_website/contact.html
+++ b/clients/aq-remodeling/03_website/contact.html
@@ -94,7 +94,7 @@
             </article>
 
             <!-- Contact Form -->
-            <div>
+            <article>
                 <form class="contact-form" id="contactForm">
                     <div class="form-group">
                         <label for="name">Full Name *</label>
@@ -162,7 +162,7 @@
                         We respect your privacy and will never share your information.
                     </p>
                 </form>
-            </div>
+            </article>
         </div>
     </section>
 
