--- a/clients/aq-remodeling/03_website/index.html
+++ b/clients/aq-remodeling/03_website/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://aqremodelinginc.com/">
     <meta property="og:title" content="AQ Remodeling | Premium Remodeling Services Orange County">
     <meta property="og:description" content="Award-winning remodeling contractor in Orange County. 20+ years transforming homes and businesses.">
-    <meta property="og:image" content="https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.png">
+    <meta property="og:image" content="https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://aqremodelinginc.com/">
     <meta property="twitter:title" content="AQ Remodeling | Premium Remodeling Services Orange County">
     <meta property="twitter:description" content="Award-winning remodeling contractor in Orange County. 20+ years transforming homes and businesses.">
-    <meta property="twitter:image" content="https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.png">
+    <meta property="twitter:image" content="https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.webp">
 
     <!-- Canonical -->
     <link rel="canonical" href="https://aqremodelinginc.com/">
@@ -44,7 +44,7 @@
       "@context": "https://schema.org",
       "@type": "GeneralContractor",
       "name": "AQ Remodeling",
-      "image": "https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.png",
+      "image": "https://aqremodelinginc.com/images/Work-pics-and-vids/IMG_0468.webp",
       "description": "Premium residential and commercial remodeling services in Orange County, California",
       "address": {
         "@type": "PostalAddress",
@@ -145,7 +145,7 @@
         <div class="grid-2">
             <!-- Commercial Path -->
             <a href="commercial.html" class="journey-card">
-                <img src="images/Work-pics-and-vids/IMG_0480.png" alt="Commercial Remodeling" class="journey-card-image">
+                <img src="images/Work-pics-and-vids/IMG_0480.webp" alt="Commercial Remodeling" class="journey-card-image">
                 <div class="journey-card-overlay">
                     <h3 class="journey-card-title">Commercial work</h3>
                     <p class="journey-card-text">Transform your business space into something extraordinary</p>
@@ -155,7 +155,7 @@
 
             <!-- Residential Path -->
             <a href="residential.html" class="journey-card">
-                <img src="images/Work-pics-and-vids/IMG_0468.png" alt="Residential Remodeling" class="journey-card-image">
+                <img src="images/Work-pics-and-vids/IMG_0468.webp" alt="Residential Remodeling" class="journey-card-image">
                 <div class="journey-card-overlay">
                     <h3 class="journey-card-title">Residential work</h3>
                     <p class="journey-card-text">Create your dream home with luxury craftsmanship</p>
@@ -301,7 +301,7 @@
     <!-- Video/Process Section -->
     <section class="section">
         <div class="grid-2">
-            <img src="images/Work-pics-and-vids/IMG_0465.png" alt="Luxury Kitchen Design" class="image-cover">
+            <img src="images/Work-pics-and-vids/IMG_0465.webp" alt="Luxury Kitchen Design" class="image-cover">
             <article>
                 <h2>Where luxury meets craftsmanship</h2>
                 <p>Every project we undertake is a testament to our commitment to excellence. We blend innovative design with traditional craftsmanship to create spaces that are both beautiful and functional.</p>
