--- a/clients/aq-remodeling/03_website/residential.html
+++ b/clients/aq-remodeling/03_website/residential.html
@@ -6,6 +6,7 @@
     <title>Residential Remodeling - AQ Remodeling</title>
     <meta name="description" content="Expert residential remodeling services for kitchens, bathrooms, garages, and whole-home renovations in Orange County. Garage design, flooring, doors, and cabinets.">
     <link rel="stylesheet" href="css/style.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero hero-simple" style="background-image: url('images/Work-pics-and-vids/IMG_0463.png');">
+    <section class="hero hero-simple" style="background-image: url('images/Work-pics-and-vids/IMG_0463.webp');">
         <h1>Your home reimagined</h1>
         <p>Create the home of your dreams with expert residential remodeling services</p>
         <a href="tel:7147512222" class="cta-button">Call Nia: 714.751.2222</a>
@@ -40,7 +41,7 @@
     <!-- Overview Section -->
     <section class="section">
         <div class="grid-2">
-            <img src="images/Work-pics-and-vids/IMG_0468.png" alt="Luxury Residential Kitchen" class="image-cover">
+            <img src="images/Work-pics-and-vids/IMG_0468.webp" alt="Luxury Residential Kitchen" class="image-cover">
             <article>
                 <h2 class="heading-large">Where culinary dreams<br>meet smart business</h2>
                 <p class="text-large">Your home is your sanctuary, and every renovation should enhance both its beauty and functionality. Whether you're updating a single room or transforming your entire home, we bring expertise, creativity, and meticulous attention to detail to every project.</p>
@@ -177,7 +178,7 @@
                     <li>✓ <strong>Warranty Protected</strong> - Peace of mind with comprehensive warranties</li>
                 </ul>
             </div>
-            <img src="images/Work-pics-and-vids/IMG_0466.png" alt="Luxury Kitchen Interior" class="image-cover">
+            <img src="images/Work-pics-and-vids/IMG_0466.webp" alt="Luxury Kitchen Interior" class="image-cover">
         </div>
     </section>
 
